attempt to make compatible with Gradle 8